kubernetes-ingress/grpc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-ingress
  namespace: default
spec:
  ingressClassName: cilium
  rules:
    - http:
        paths:
          - backend:
              service:
                name: productcatalogservice
                port:
                  number: 3550
            path: /hipstershop.ProductCatalogService
            pathType: Prefix
          - backend:
              service:
                name: currencyservice
                port:
                  number: 7000
            path: /hipstershop.CurrencyService
            pathType: Prefix
