kubernetes-ingress/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
  namespace: default
spec:
  ingressClassName: cilium
  rules:
    - host: hipstershop.cilium.rocks
      http:
        paths:
          - backend:
              service:
                name: productcatalogservice
                port:
                  number: 3550
            path: /hipstershop.ProductCatalogService
            pathType: Prefix
          - backend:
              service:
                name: currencyservice
                port:
                  number: 7000
            path: /hipstershop.CurrencyService
            pathType: Prefix
    - host: bookinfo.cilium.rocks
      http:
        paths:
          - backend:
              service:
                name: details
                port:
                  number: 9080
            path: /details
            pathType: Prefix
          - backend:
              service:
                name: productpage
                port:
                  number: 9080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - bookinfo.cilium.rocks
        - hipstershop.cilium.rocks
      secretName: demo-cert
